# password_manager

./: .gitignore  ARCHITECTURE.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  backend_dev_server.bat  pyproject.toml  readme - Copy.md  requirements.txt  run.bat  run.sh  setup.py
backend/app/: __init__.py  main.py  paths.py
backend/app/core/: __init__.py  config.py  crypto.py  vault.py
backend/app/utils/: __init__.py  logger.py  password_generator.py  security_audit.py
flutter/: COMPLETE.md  MIGRATION.md  README.md  analysis_options.yaml  pubspec.yaml  setup.bat  setup.sh
flutter/lib/: main.dart
flutter/lib/models/: credential.dart
flutter/lib/providers/: app_settings_provider.dart  vault_provider.dart
flutter/lib/screens/: add_credential_screen.dart  app_shell.dart  edit_credential_screen.dart  home_screen.dart  item_editor_screen.dart  login_screen.dart  password_generator_page.dart  security_center_page.dart  settings_page.dart  vault_page.dart
flutter/lib/services/: biometric_service.dart  intrusion_log.dart  secure_clipboard.dart  totp.dart  vault_insights.dart
flutter/lib/theme/: app_theme.dart
flutter/lib/utils/: crack_time.dart  crypto_utils.dart
flutter/lib/widgets/: brand_logo.dart  cipher_nest_mark.dart  (+7 more)
flutter/test/: widget_test.dart
flutter/web/: index.html
scripts/: generate_app_icon.ps1
src/: __init__.py
src/api/: main.py
src/core/: __init__.py  config.py  crypto.py  vault.py
src/utils/: __init__.py  logger.py  password_generator.py  security_audit.py
tools/: flutter_path.bat  init_flutter_path.ps1
(+12 files in other folders)
